updated bot creation (direct message commenting)

--- a/views/pages/createbot.ejs
+++ b/views/pages/createbot.ejs
@@ -169,8 +169,8 @@
                                                             <input type="text" id="customer-proxy-url"
                                                                 class="form-control form-control-lg" 
                                                                 style="font-size: 14px" 
-                                                                placeholder="Proxy URL" 
-                                                                aria-label="Proxy URL" 
+                                                                placeholder="Yopur proxy URL" 
+                                                                aria-label="Your proxy URL" 
                                                                 aria-describedby="Proxy URL" />
                                                         </div>
                                                     </div>
@@ -516,7 +516,7 @@
             <% include ../partials/_footer %>
             <!-- partial -->
             </div>
-        <!-- main-panel ends -->
+            <!-- main-panel ends -->
         </div>
         <!-- page-body-wrapper ends -->
     </div>
