--- a/views/pages/createbot.ejs
+++ b/views/pages/createbot.ejs
@@ -487,7 +487,7 @@
                                                     <div class="form-check form-check-flat ml-3">
                                                         <label class="form-check-label">
                                                             <input type="checkbox" id="confirm-setting" class="form-check-input"> 
-                                                            Confirm your bot setting before create new bot. 
+                                                            Confirm your bot setting. 
                                                             <i class="input-helper"></i>
                                                         </label>
                                                     </div>
